		The file forward function now always puts a 8.3 filename in
		the outgoing ticfile. For most files nothing is changed.
		AreaMgr and FileMgr netmails are now split into more netmails
		when the become too large.
		When a downlink requests an echomail area which is not yet 
		available, and there is a areas file for some uplink, the area
		is automatic created and a areamgr request is sent to the 
		uplink to connect that area. The area is created with the
		defaults from the mailgroup.
		Experimental patch in mkftnhdr to create a To address in news
		articles where a Reply-To: header is present.

	mball:
		Will not crash anymore when it needs more then 10 minutes to
		create the allfiles and newfiles lists.

	mbtask:
		Removed some debug logging.
		Creates the semafore is_inet when the internet connections is
		available, and removes it when it is down.
		Added test for ISDN/modem lines in use.
		Lost of code cleanup.
		No setup setting anymore for maximum POTS and ISDN lines, this
		is now automatic.
		mbtask will now update internal counters how many ISDN and POTS
		lines are free to use for dialout.

	mbcico:
		Fixed binkp driver to accept incoming unprotected sessions.
		Temporary added extra password handling logs.
		If a binkp session comes in and there already is a session
		with that node, mbcico stopts the binkp session with an error.

	mbout:
		The status display has now 9 digits for the outbound size.

	mbsebbs:
		On some systems the download taglists contained garbage after
		the short filename causing wrong filenames at the users side.

	mbuser:
		If a new user has registered and not yet used the bbs, mbuser
		would kill that user because the last login date wasn't set.
		It will use the registration date instead.

	hatch:
		A new shellscript to hatch files in a tic area.

	mbuseradd:
		Added support for vpopmail, vadduser command.

	mbpasswd:
		Added support for vpopmail, vpasswd command.

	mbuser:
		Added support for vpopmail, vdeluser command.
