@@ -4664,17 +4664,20 @@ v0.33.20        10-Feb-2002
 		Creates the semafore is_inet when the internet connections is
 		available, and removes it when it is down.
 		Added test for ISDN/modem lines in use.
-		Lost of code cleanup.
+		Lots of code cleanup.
 		No setup setting anymore for maximum POTS and ISDN lines, this
 		is now automatic.
 		mbtask will now update internal counters how many ISDN and POTS
 		lines are free to use for dialout.
+		For ISDN and POTS calls, mbtask now decides which tty to use,
+		mbcico gets the tty to use as option on the commandline.
 
 	mbcico:
 		Fixed binkp driver to accept incoming unprotected sessions.
 		Temporary added extra password handling logs.
 		If a binkp session comes in and there already is a session
 		with that node, mbcico stopts the binkp session with an error.
+		Remove some obsolete code that is handled by mbtask.
 
 	mbout:
 		The status display has now 9 digits for the outbound size.
